fix timer; add opening video

--- a/frontend/css/grid.css
+++ b/frontend/css/grid.css
@@ -36,6 +36,8 @@
     overflow: hidden;
     box-sizing: border-box;
     aspect-ratio: 1 / 1;
+    position: relative;
+    z-index: 2;
 }
 
 .grid-cell {
