--- a/frontend/css/grid.css
+++ b/frontend/css/grid.css
@@ -10,7 +10,7 @@
     align-items: stretch;
     width: 100%;
     height: 100%;
-    max-height: 100%;
+
     padding: 0;
     overflow: hidden;
     position: relative;
@@ -36,6 +36,8 @@
     overflow: hidden;
     box-sizing: border-box;
     aspect-ratio: 1 / 1;
+    position: relative;
+    z-index: 2;
 }
 
 .grid-cell {
